src/objects/Test_Drive__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Drive__c</fullName>
        <label>End Drive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Test Drives</relationshipLabel>
        <relationshipName>Test_Drives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Opportunity_Product__r.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Drive__c</fullName>
        <label>Start Drive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Drives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Drive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Price__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Test Drive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>